Fix iOS layout issues

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -251,6 +251,7 @@ ul.topbar-dropdown {
 
 #header-bar {
   background:#3a393a;
+  height: auto;
 
   section {
     max-width:$row-width;
